@@ -36,30 +36,5 @@ email2page
 sendmail2snpp
 sendpage-db
 sendpage.init
+t/00_init.t
 META.yml                                 Module meta-data (added by MakeMaker)
-debian/changelog
-debian/copyright
-debian/control
-debian/sendpage-client.conffiles
-debian/rules
-debian/sendpage-client.dirs
-debian/sendpage-client.docs
-debian/sendpage-common.prerm
-debian/sendpage.cf.example
-debian/sendpage-server.conffiles
-debian/sendpage-server.dirs
-debian/sendpage-server.docs
-debian/sendpage-server.init
-debian/sendpage-server.postinst
-debian/sendpage-server.config
-debian/sendpage-server.prerm
-debian/sendpage-common.docs
-debian/sendpage-client.config
-debian/sendpage-server.templates
-debian/sendpage-client.templates
-debian/sendpage-server.postrm
-debian/README.Debian
-debian/sendpage-client.postinst
-debian/po/POTFILES.in
-debian/po/templates.pot
-debian/po/fr.po
